# AsymDSD

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  job_start.ipynb  job_start_stampa.ipynb  pyproject.toml
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  postCreateCommand.sh
asymdsd/callbacks/: __init__.py  mask_attention_visualizer.py  pq_stem_export.py  pqstem_eval_visualizer.py
asymdsd/components/: checkpointing_utils.py
asymdsd/data/: __init__.py  dataset_zarr.py  stampa.py
asymdsd/layers/: __init__.py  drop_path.py  flash_attention.py  relative_3d_bias.py  transformer.py
asymdsd/models/: __init__.py  asymdsd.py  asymdsd_ag.py  asymdsd_bn.py  asymdsd_dv.py  asymdsd_fab.py  asymdsd_fab_adaptive.py  asymdsd_fab_packed.py  asymdsd_fab_packed_slots.py  asymdsd_pqdt_fab_packed.py  asymdsd_pqstem_fab_packed.py  asymdsd_seq.py  point_encoder.py  pq_stem.py  pq_stem_point_encoder.py  pq_transup.py  pqdt_tail.py
asymdsd/run/: cli.py  sem_seg_cli.py  ssrl_ag_cli.py  ssrl_bn_cli.py  ssrl_dv_cli.py  ssrl_fab_adaptive_cli.py  ssrl_fab_cli.py  ssrl_fab_packed_cli.py  ssrl_fab_packed_slots_cli.py  ssrl_pqdt_fab_packed_cli.py  ssrl_pqstem_fab_packed_cli.py  ssrl_seq_cli.py
configs/data/: STAMPA-U.yaml  ex_STAMPA-U.yaml
configs/semseg/: semseg.yaml  semseg_DEFAULT.yaml  semseg_model.yaml  semseg_optim.yaml  semseg_trainer.yaml  semseg_wandb.yaml
configs/ssrl/: ex_ssrl_pqdt_fab_packed.yaml  ex_ssrl_pqstem_fab_packed.yaml  ex_ssrl_pqstem_trainer.yaml  ex_ssrl_pqstem_wandb.yaml  ssrl_pqdt_fab_packed.yaml  ssrl_pqdt_trainer.yaml  ssrl_pqstem_fab_packed.yaml  ssrl_pqstem_optim.yaml  ssrl_pqstem_trainer.yaml  ssrl_pqstem_wandb.yaml  ssrl_seq.yaml  ssrl_trainer.yaml
shell_scripts/sh/: train_neural_classifier.sh  train_ssrl_ag.sh  train_ssrl_bn.sh  train_ssrl_dv.sh  train_ssrl_fab.sh  train_ssrl_fab_adaptive.sh  train_ssrl_seq.sh  (+4 more)
tests/: test_mask_attention_visualizer.py  test_pqdt_fab_packed.py  test_pqstem_bridge.py  test_pqstem_eval_visualizer.py  test_stampa_split.py
(+45 files in other folders)
