[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asymdsd"
version = "1.0"
dependencies = []
requires-python = ">=3.11.0, <3.13"
# authors = [{ name = "HIDDEN" }]
description = "Asymmetric Dual Self-Distillation for 3D representation learning (AsymDSD)."
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = []

[project.scripts]
prepare_dataset = "asymdsd.run:create_zarr_ds_cli"

[tool.setuptools]
packages = ["asymdsd"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "data",
]


line-length = 88 # Black uses 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"] # The "I" is for `isort`.
ignore = ["E731", "F403", "F405"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
[tool.pyright]
typeCheckingMode = "basic"
ignore = ["sandbox/**", "data/**"]
pythonVersion = "3.11"
